# cpp_starter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
libs/: CMakeLists.txt
libs/arithmetics/: CMakeLists.txt
libs/arithmetics/include/: arithmetics.hpp
libs/arithmetics/src/: arithmetics.cpp
libs/arithmetics/test/: CMakeLists.txt  arithmetics_test.cpp
